Mejoras en el responsive + Pq usaba bootstrap y noo tailwind + Nutrias

--- a/index.html
+++ b/index.html
@@ -1,34 +1,90 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Saber cuanto falta para cobrar">
-    <meta property="og:description" content="Pagina con fines recreativos">
+    <meta property="og:description" content="Página con fines recreativos">
     <meta property="og:image" content="nutria.jpg">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Cuanto falta:</title>
+    <title>Página que te avisa</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+
 <body>
-    <div class="container">
-        <h1>Cuanto falta:</h1>
-        <div id="countdown" class="countdown"></div>
-        <div class="magia">
-            <div class="btn">
-                <a href="#" id="nutria" onclick="aparecerNutria()">Hazme click si quieres magia</a>
+    <div class="container-fluid">
+        <div class="row">
+            <h2 class="pt-5 text-center">Página que te avisa cuando cuanto falta para ....</h2>
+            <div class="row">
+                <div class="col-md-6 offset-md-3">
+                    <img class="w-100 d-block mx-auto rounded" src="nutria.gif" alt="Nutria Bailarina">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-md-6 offset-md-3 col-sm-12 mt-5 mb-5">
+                    <div class="shadow bg-body-tertiary rounded ">
+                        <div class="row">
+                            <div class="countdown" id="countdown"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="d-grid gap-2 col-md-6 col-12 offset-sm-3 col-sm-12 mx-auto">
+                    <button class="btn btn-primary btn-custom-one" type="button" data-bs-toggle="modal" data-bs-target="#modalNutria">Quiero ser feliz</button>
+                    <button class="btn btn-primary btn-custom-two" type="button" data-bs-toggle="modal" data-bs-target="#modalEncajar">Quiero encajar en la sociedad</button>
+                </div>
             </div>
         </div>
     </div>
-    
-    <script src="script.js"></script>
+    <div class="position-fixed bottom-0 end-0">
+        <a class="text-center d-flex nutria-sugerencia" href="https://github.com/noteregalesuwu/when_cobramos/issues" target="_blank">
+            <img class="w-50 mx-auto" src="nutria.png" alt="Nutria Sugerencias">
+            Surgerir ideas
+        </a>            
+    </div>
+    <footer>
+        <script src="script.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
+    </footer>
 </body>
-</html>
-
-<div id="myModal" class="modal">
-    <div class="modal-content">
-        <span class="close" onclick="cerrarModal()">&times;</span>
-        <img src="nutria.gif" alt="Gif de nutria">
+<div class="modal fade" id="modalNutria" tabindex="-1" aria-labelledby="modalNutriaLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="modalNutriaLabel">Nutria feliz</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <img class="img-fluid" src="nutria.gif" alt="Nutria Bailarina">
+            </div>
+            <div class="modal-footer">
+               <p class="text-center">Esta nutria no es responsable por el sitio web</p>
+            </div>
+        </div>
     </div>
 </div>
-  
+<div class="modal fade" id="modalEncajar" tabindex="-1" aria-labelledby="modalEncajarLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="modalEncajarLabel">Nutria feliz</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <img class="img-fluid" src="nutria.gif" alt="Nutria Bailarina">
+                <p class="text-center mt-4">Que pensaste? Esta nutria tambien te hace encajar en la sociedad.</p>
+            </div>
+            <div class="modal-footer">
+               <p class="text-center">Esta nutria no es responsable por el sitio web</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+</html>
