--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <h2 class="pt-5 text-center">Página que te avisa cuando cuanto falta para ....</h2>
+            <h2 class="pt-5 pb-5 text-center">Página que te avisa cuando cuanto falta para ....</h2>
             <div class="row">
                 <div class="col-md-6 offset-md-3">
                     <img class="w-100 d-block mx-auto rounded" src="nutria.gif" alt="Nutria Bailarina">
@@ -33,20 +33,21 @@
                 </div>
             </div>
             <div class="row">
-                <div class="d-grid gap-2 col-md-6 col-12 offset-sm-3 col-sm-12 mx-auto">
+                <div class="d-grid gap-2 col-md-6 col-12 offset-sm-3 col-sm-12 mx-auto pb-5 mb-5">
                     <button class="btn btn-primary btn-custom-one" type="button" data-bs-toggle="modal" data-bs-target="#modalNutria">Quiero ser feliz</button>
                     <button class="btn btn-primary btn-custom-two" type="button" data-bs-toggle="modal" data-bs-target="#modalEncajar">Quiero encajar en la sociedad</button>
                 </div>
             </div>
+            <div class="row">
+                <a class="text-center d-flex nutria-sugerencia" href="https://github.com/noteregalesuwu/when_cobramos/issues" target="_blank">
+                    <img class="w-auto mx-auto" src="nutria.png" alt="Nutria Sugerencias">
+                    Surgerir ideas
+                </a>      
+            </div>
         </div>
     </div>
-    <div class="position-fixed bottom-0 end-0">
-        <a class="text-center d-flex nutria-sugerencia" href="https://github.com/noteregalesuwu/when_cobramos/issues" target="_blank">
-            <img class="w-50 mx-auto" src="nutria.png" alt="Nutria Sugerencias">
-            Surgerir ideas
-        </a>            
-    </div>
     <footer>
+        <p class="text-center mt-5 pt-5 mb-5 pb-5">Pagina completamente realizada por Chat GPT</p>
         <script src="script.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
