--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
         </div>
         <footer class="row">
             <nav class="fixed-bottom bg-custom-violet text-center">
-                <small class="text-center">Pagina hecha 100% por una nutria con ChatGPT en la mochila</small>
+                <small class="text-center">Pagina hecha 100% por una nutria con ChatGPT en la mochila</small></br>
+                <small class="text-center">Se aceptan sugerencias de diseño</small>
             </nav>
             <script src="script.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
