--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta property="og:title" content="Saber cuanto falta para cobrar">
     <meta property="og:description" content="Página con fines recreativos">
     <meta property="og:image" content="nutria.jpg">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
     <title>Página que te avisa</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <nav class="navbar navbar-expand-lg bg-custom-green">
     <div class="container-fluid">
@@ -41,8 +41,19 @@
         <div class="row" id="cobrar">
             <h2 class="pt-5 pb-5 text-center">Página que te avisa cuando cuanto falta para cobrar</h2>
             <div class="row">
-                <div class="col-md-6 offset-md-3">
-                    <img class="w-100 d-block mx-auto rounded" src="nutria.gif" alt="Nutria Bailarina">
+                <div class="col-md-6 offset-md-3" id="nutrias-tristes">
+                    <p class="text-center mt-3 mb-3">🥲 Nutrias Tristes 🥲</p>
+                    <div class="nutrias-agrupadas d-flex">
+                        <img src="/img/nutria-triste.jpg" class="rounded d-block mx-auto w-25" alt="Nutria Triste">
+                        <img src="/img/nutria-triste-2.jpg" class="rounded d-block mx-auto w-25" alt="Nutria Triste">
+                        <img src="/img/nutria-triste-3.jpg" class="rounded d-block mx-auto w-25" alt="Nutria Triste">
+                    </div>
+                    <p class="text-center mt-3 mb-3">🥲 Nutrias Tristes 🥲</p>
+                </div>
+                <div class="col-md-6 offset-md-3" id="es-hoy">
+                    <p class="text-center mt-3 mb-3">🤑 Es hoy es hoy 🤑</p>
+                    <img class="w-100 d-block mx-auto rounded" src="/img/nutria.gif" alt="Nutria Bailarina">
+                    <p class="text-center mt-3 mb-3">🤑 Es hoy es hoy 🤑</p>
                 </div>
             </div>
             <div class="row">
@@ -64,7 +75,8 @@
             <h2 class="pt-5 pb-5 text-center color-aguinaldo">Página que te avisa cuando cuanto falta para el Aguinaldo</h2>
             <div class="row">
                 <div class="col-md-6 offset-md-3">
-                    <img class="w-100 d-block mx-auto rounded" src="nutria.gif" alt="Nutria Bailarina">
+                    <img class="w-50 d-block mx-auto rounded" src="/img/nutria-triste.jpg" alt="Nutria Triste">
+                    <p class="text-center mt-3 mb-3">Por que no puedo adelantar el tiempo?</p>
                 </div>
             </div>
             <div class="row">
@@ -88,7 +100,7 @@
                 <small class="text-center">Pagina hecha 100% por una nutria con ChatGPT en la mochila</small></br>
                 <small class="text-center">Se aceptan sugerencias de diseño</small>
             </nav>
-            <script src="script.js"></script>
+            <script src="/js/script.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
                 crossorigin="anonymous"></script>
