--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
             <div class="row">
                 <div class="d-grid gap-2 col-md-6 col-12 offset-sm-3 col-sm-12 mx-auto pb-5 mb-5">
-                    <button class="btn btn-primary btn-custom-two" id="btn-aguinaldo">Y cuanto falta para el aguidaldo?</button>
+                    <button class="btn btn-primary btn-custom-two" id="btn-aguinaldo">Y cuanto falta para el aguinaldo?</button>
                 </div>
             </div>
         </div>
