Correccion del responsive choto que tenia

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <body>
     <div class="container-fluid">
-        <div class="row" id="cobrar">
+        <div class="row justify-content-center" id="cobrar">
             <h2 class="pt-5 pb-5 text-center">Página que te avisa cuando cuanto falta para cobrar</h2>
             <div class="row">
                 <div class="col-md-6 offset-md-3" id="nutrias-tristes">
@@ -58,7 +58,7 @@
             </div>
             <div class="row">
                 <div class="col-12 col-md-6 offset-md-3 col-sm-12 mt-5 mb-5">
-                    <div class="shadow bg-body-tertiary rounded ">
+                    <div class="shadow-lg bg-body-tertiary rounded">
                         <div class="row">
                             <div class="countdown" id="countdown-cobro"></div>
                         </div>
@@ -71,7 +71,7 @@
                 </div>
             </div>
         </div>
-        <div class="row" id="aguinaldo">
+        <div class="row justify-content-center" id="aguinaldo">
             <h2 class="pt-5 pb-5 text-center color-aguinaldo">Página que te avisa cuando cuanto falta para el Aguinaldo</h2>
             <div class="row">
                 <div class="col-md-6 offset-md-3">
