Nuevo estilo de la web

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
 </nav>
 
-<body>
+<body class="bg-light">
     <div class="container-fluid">
         <div class="row justify-content-center" id="cobrar">
             <h2 class="pt-5 pb-5 text-center">Página que te avisa cuando cuanto falta para cobrar</h2>
@@ -59,7 +59,7 @@
             <div class="row">
                 <div class="col-12 col-md-6 offset-md-3 col-sm-12 mt-5 mb-5">
                     <div class="shadow-lg bg-body-tertiary rounded">
-                        <div class="row">
+                        <div class="row justify-content-center">
                             <div class="countdown" id="countdown-cobro"></div>
                         </div>
                     </div>
@@ -72,10 +72,10 @@
             </div>
         </div>
         <div class="row justify-content-center" id="aguinaldo">
-            <h2 class="pt-5 pb-5 text-center color-aguinaldo">Página que te avisa cuando cuanto falta para el Aguinaldo</h2>
+            <h2 class="pt-5 pb-5 text-center">Página que te avisa cuando cuanto falta para el Aguinaldo</h2>
             <div class="row">
                 <div class="col-md-6 offset-md-3">
-                    <img class="w-50 d-block mx-auto rounded" src="nutria-triste.jpg" alt="Nutria Triste">
+                    <img class="w-25 d-block mx-auto rounded" src="nutria-triste.jpg" alt="Nutria Triste">
                     <p class="text-center mt-3 mb-3">Por que no puedo adelantar el tiempo?</p>
                 </div>
             </div>
@@ -86,7 +86,7 @@
                             <div class="countdown" id="countdown-aguinaldo"></div>
                         </div>
                     </div>
-                    <p class="text-center mt-3 color-aguinaldo"><small>Manifiestamos que sea el 16 de Diciembre</small></p>
+                    <p class="text-center mt-3"><small>Manifiestamos que sea el 16 de Diciembre</small></p>
                 </div>
             </div>
             <div class="row">
@@ -96,9 +96,8 @@
             </div>
         </div>
         <footer class="row">
-            <nav class="fixed-bottom bg-custom-violet text-center">
-                <small class="text-center">Pagina hecha 100% por una nutria con ChatGPT en la mochila</small></br>
-                <small class="text-center">Se aceptan sugerencias de diseño</small>
+            <nav class="fixed-bottom bg-custom-green text-center">
+                <small class="text-center">Se aceptan sugerencias de diseño (xfa)</small>
             </nav>
             <script src="script.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
