Mejoras en la funcionalidad del sitio

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                     <a class="nav-link" id="aguinaldoRef">Para cuando el Aguinaldo</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" id="informacionesRef">Informaciones</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="https://github.com/noteregalesuwu/when_cobramos/issues"
                         target="_blank">Sugerencias</a>
                 </li>
@@ -44,16 +47,14 @@
                 <div class="col-md-6 offset-md-3" id="nutrias-tristes">
                     <p class="text-center mt-3 mb-3">🥲 Nutrias Tristes 🥲</p>
                     <div class="nutrias-agrupadas d-flex">
-                        <img src="nutria-triste.jpg" class="rounded d-block mx-auto w-25" alt="Nutria Triste">
                         <img src="nutria-triste-2.jpg" class="rounded d-block mx-auto w-25" alt="Nutria Triste">
-                        <img src="nutria-triste-3.jpg" class="rounded d-block mx-auto w-25" alt="Nutria Triste">
+                        <img src="nutria-triste-1.jpg" class="rounded d-block mx-auto w-25" alt="Nutria Triste">
+                        <img src="nutria-triste.jpg" class="rounded d-block mx-auto w-25" alt="Nutria Triste">
                     </div>
-                    <p class="text-center mt-3 mb-3">🥲 Nutrias Tristes 🥲</p>
                 </div>
                 <div class="col-md-6 offset-md-3" id="es-hoy">
                     <p class="text-center mt-3 mb-3">🤑 Es hoy es hoy 🤑</p>
                     <img class="w-100 d-block mx-auto rounded" src="nutria.gif" alt="Nutria Bailarina">
-                    <p class="text-center mt-3 mb-3">🤑 Es hoy es hoy 🤑</p>
                 </div>
             </div>
             <div class="row">
@@ -94,6 +95,20 @@
                     <button class="btn btn-primary btn-custom-two" id="btn-sueldo">Y cuanto falta para el sueldo?</button>
                 </div>
             </div>
+        </div>
+        <div class="row justify-content-center" id="informaciones">
+            <div class="col-12 col-md-6 col-sm-12 mt-5 mb-5">
+                <h2 class="text-center">Info</h2>
+                <p class="text-center">Esta página web fue creada como un meme.</p>
+                <p class="text-center">Se tiene en cuenta que la hora de cobro para el contador es a las 18:00 horas, y el día de cobro es el último día hábil de cada mes. El aguinaldo, aunque no sabemos cuándo se paga en realidad, le hemos puesto el 16 de diciembre por diversión.</p>
+                <p class="text-center">En el botón de sugerencias pueden enviar cualquier cosa que deseen que se agregue o modifique, pero evitando contenido promocional o spam.</p>
+                <p class="text-center">Gracias por visitar el sitio y ¡que vivan las nutrias!</p>
+                <img class="w-25 mx-auto d-block rounded mb-1 mt-5" src="nutria-triste-3.jpg" alt="Lic. Nutriologo">
+                <p class="text-firma text-center mb-0">Atte.</br>
+                    Lic. Nutriologo.</p>
+                
+            </div>
+            
         </div>
         <footer class="row">
             <nav class="fixed-bottom bg-custom-green text-center">
