--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                     <a class="nav-link" id="informacionesRef">Informaciones</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" id="darkMode">Cambiar a Modo Oscuro</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="https://github.com/noteregalesuwu/when_cobramos/issues"
                         target="_blank">Sugerencias</a>
                 </li>
@@ -39,7 +42,7 @@
     </div>
 </nav>
 
-<body class="bg-light">
+<body class="bg-light" id="body-theme">
     <div class="container-fluid">
         <div class="row justify-content-center" id="cobrar">
             <h2 class="pt-5 pb-5 text-center">Página que te avisa cuando cuanto falta para cobrar</h2>
@@ -59,6 +62,7 @@
             </div>
             <div class="row">
                 <div class="col-12 col-md-6 offset-md-3 col-sm-12 mt-5 mb-5">
+                    <p class="text-center">Faltan:</p>
                     <div class="shadow-lg bg-body-tertiary rounded">
                         <div class="row justify-content-center">
                             <div class="countdown" id="countdown-cobro"></div>
@@ -82,6 +86,7 @@
             </div>
             <div class="row">
                 <div class="col-12 col-md-6 offset-md-3 col-sm-12 mt-5 mb-5">
+                    <p class="text-center">Faltan:</p>
                     <div class="shadow bg-body-tertiary rounded">
                         <div class="row">
                             <div class="countdown" id="countdown-aguinaldo"></div>
