--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 offset-md-3" id="es-hoy">
-                    <p class="text-center mt-3 mb-3">🤑 Es hoy es hoy 🤑</p>
+                    <p class="text-center mt-3 mb-3" id="texto-feliz">🤑 Es hoy es hoy 🤑</p>
                     <img class="w-100 d-block mx-auto rounded" src="nutria.gif" alt="Nutria Bailarina">
                 </div>
             </div>
@@ -104,7 +104,7 @@
             <div class="col-12 col-md-6 col-sm-12 mt-5 mb-5">
                 <h2 class="text-center">Info</h2>
                 <p class="text-center">Esta página web fue creada como un meme.</p>
-                <p class="text-center">Se tiene en cuenta que la hora de cobro para el contador es a las 18:00 horas, y el día de cobro es el último día hábil de cada mes. El aguinaldo, aunque no sabemos cuándo se paga en realidad, le hemos puesto el 16 de diciembre por diversión.</p>
+                <p class="text-center">Se tiene en cuenta que la hora de cobro para el contador es a las 23:59 horas, y el día de cobro es el último día hábil de cada mes. El aguinaldo, aunque no sabemos cuándo se paga en realidad, le hemos puesto el 16 de diciembre por diversión.</p>
                 <p class="text-center">En el botón de sugerencias pueden enviar cualquier cosa que deseen que se agregue o modifique, pero evitando contenido promocional o spam.</p>
                 <p class="text-center">Gracias por visitar el sitio y ¡que vivan las nutrias!</p>
                 <img class="w-25 mx-auto d-block rounded mb-1 mt-5" src="nutria-triste-3.jpg" alt="Lic. Nutriologo">
