--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Página que te avisa</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <nav class="navbar navbar-expand-lg bg-custom-green">
@@ -30,11 +31,15 @@
                     <a class="nav-link" id="informacionesRef">Informaciones</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="darkMode">Cambiar a Modo Oscuro</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="https://github.com/noteregalesuwu/when_cobramos/issues"
                         target="_blank">Sugerencias</a>
+                </li>
+                <li class="nav-item dropdown bg-custom-green">
+                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Tema <i id="toggleTheme" class="bi bi-brightness-high-fill"></i></a>
+                    <ul class="dropdown-menu bg-custom-green">
+                        <li><a class="dropdown-item" href="#" id="normalMode"><i class="bi bi-brightness-high-fill"></i> Normal</a></li>
+                        <li><a class="dropdown-item" href="#" id="darkMode"><i class="bi bi-moon-stars-fill"></i> Dark </a></li>
+                    </ul>
                 </li>
             </ul>
         </div>
