--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta property="og:image" content="nutria.jpg">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Página que te avisa</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -22,10 +23,13 @@
         <div class="collapse navbar-collapse justify-content-center" id="navBar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" id="cobrarRef">Cuando cobramos?</a>
+                    <a class="nav-link" id="cobrarRef">Sueldo</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="aguinaldoRef">Para cuando el Aguinaldo</a>
+                    <a class="nav-link" id="aguinaldoRef">Aguinaldo</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="memesRef">Memes</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" id="informacionesRef">Informaciones</a>
@@ -57,6 +61,9 @@
                         <img src="nutria-triste-2.jpg" class="rounded d-block mx-auto w-25" alt="Nutria Triste">
                         <img src="nutria-triste-1.jpg" class="rounded d-block mx-auto w-25" alt="Nutria Triste">
                         <img src="nutria-triste.jpg" class="rounded d-block mx-auto w-25" alt="Nutria Triste">
+                    </div>
+                    <div class="d-flex justify-content-center mt-3">
+                        <button class="btn btn-primary" id="verMemes">Ver momazos</button>
                     </div>
                 </div>
                 <div class="col-md-6 offset-md-3" id="es-hoy">
@@ -117,6 +124,22 @@
                     Lic. Nutriologo.</p>
             </div>
         </div>
+        <div class="row justify-content-center" id="memes">
+            <h2 class="pt-5 pb-1 text-center">Memes de Julio</h2>
+            <h6 class="pb-1 text-center">Click para ver mejor</h6>
+            <div class="justify-content-center">
+                <div class="col-12 col-md-6 offset-md-3">
+                    <div class="d-flex">
+                        <div class="row justify-content-center" id="row-memes">
+                            
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-center mt-3">
+                        <button class="btn btn-primary" id="volverInicio">Volver a inicio</button>
+                    </div>
+                </div>
+            </div>
+        </div>
         <footer class="row">
             <nav class="fixed-bottom bg-custom-green text-center">
                 <small class="text-center">Se aceptan sugerencias de diseño (xfa)</small>
@@ -126,23 +149,13 @@
                 integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
                 crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/@tsparticles/confetti@3.4.0/tsparticles.confetti.bundle.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+            <script>
+                Fancybox.bind('[data-fancybox="gallery"]', {
+                
+                });
+            </script>
         </footer>
     </div>
 </body>
 </html>
-<button style="display: none;" id="btnModalMeme" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalMeme"></button>
-<div class="modal fade" id="modalMeme" tabindex="-1" aria-labelledby="modalMemeLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h6>Memes de Julio</h6>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <div class="col-12">
-                    <img id="memeJulio" class="w-100 d-block mx-auto" src="julio/julio-1.jpg" alt="Meme">
-                </div>
-            </div>
-        </div>
-    </div>
-  </div>
