Agregamos toggle del tema actual

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                         target="_blank">Sugerencias</a>
                 </li>
                 <li class="nav-item dropdown bg-custom-green">
-                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Tema <i id="toggleTheme" class="bi bi-brightness-high-fill"></i></a>
-                    <ul class="dropdown-menu bg-custom-green">
-                        <li><a class="dropdown-item" href="#" id="normalMode"><i class="bi bi-brightness-high-fill"></i> Normal</a></li>
-                        <li><a class="dropdown-item" href="#" id="darkMode"><i class="bi bi-moon-stars-fill"></i> Dark </a></li>
-                    </ul>
+                    <div class="form-check form-switch d-flex align-items-center" style="height: 100%;">
+                        <i class="bi bi-brightness-high-fill"></i>
+                        <input class="form-check-input mx-2" type="checkbox" role="switch" id="theme-switcher">
+                        <i class="bi bi-moon-stars-fill"></i>
+                    </div>
                 </li>
             </ul>
         </div>
