Agregamos contador de visitas

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 
 <body class="bg-light" id="body-theme">
     <div class="container-fluid">
+        <div id="sfc2lnczms1hxrlqs49kgs3qbd98952jqj6"></div>
+        <script type="text/javascript" src="https://counter8.optistats.ovh/private/counter.js?c=2lnczms1hxrlqs49kgs3qbd98952jqj6&down=async" async></script>
         <div class="row justify-content-center" id="cobrar">
             <h2 class="pt-5 pb-5 text-center">Página que te avisa cuando cuanto falta para cobrar</h2>
             <div class="row">
@@ -140,6 +142,7 @@
                 </div>
             </div>
         </div>
+
         <footer class="row">
             <nav class="fixed-bottom bg-custom-green text-center">
                 <small class="text-center">Se aceptan sugerencias de diseño (xfa)</small>
@@ -157,5 +160,6 @@
             </script>
         </footer>
     </div>
+    
 </body>
 </html>
