--- a/index.html
+++ b/index.html
@@ -52,8 +52,6 @@
 
 <body class="bg-light" id="body-theme">
     <div class="container-fluid">
-        <div id="sfc2lnczms1hxrlqs49kgs3qbd98952jqj6"></div>
-        <script type="text/javascript" src="https://counter8.optistats.ovh/private/counter.js?c=2lnczms1hxrlqs49kgs3qbd98952jqj6&down=async" async></script>
         <div class="row justify-content-center" id="cobrar">
             <h2 class="pt-5 pb-5 text-center">Página que te avisa cuando cuanto falta para cobrar</h2>
             <div class="row">
@@ -145,7 +143,8 @@
 
         <footer class="row">
             <nav class="fixed-bottom bg-custom-green text-center">
-                <small class="text-center">Se aceptan sugerencias de diseño (xfa)</small>
+                <small class="text-center">Contador de visitas.</small>
+                <a href="https://www.freecounterstat.com" title="free page counter"><img src="https://counter8.optistats.ovh/private/freecounterstat.php?c=s55n9r4mfffxetnjgmfh13raraaa3xcx" border="0" title="free page counter" alt="free page counter"></a>
             </nav>
             <script src="script.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
